--- a/index.html
+++ b/index.html
@@ -20,24 +20,9 @@
 
         <button id="add" onclick="add();"><i class="fas fa-plus"></i></button>
 
-        <div class = "liste"> 
-            <div id= "liste_left">Sport</div>
-            <div  class= "liste_right">
-                <span>Edit</span>
-                <button id="check"><i class="fas fa-check"></i></button>
-                <button id="kreuz"><i class="fas fa-times"></i></button>
-            </div>
 
-        </div>
-        <div class = "liste"> 
-            <div id= "liste_left"><span>Sport</span></div>
-            <div  id= "liste_right">
-                <span>Edit</span>
-                <button id="check"><i class="fas fa-check"></i></button>
-                <button id="kreuz"><i class="fas fa-times"></i></button>
-            </div>
-
-        </div>
+        <div id="container"></div>
+ 
     </div>
 
 
